[package]
name = "advent-of-code-rust"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "day01"
src = "src/day01/main.rs"

[[bin]]
name = "day02"
src = "src/day02/main.rs"

[[bin]]
name = "day03"
src = "src/day03/main.rs"

[[bin]]
name = "day04"
src = "src/day04/main.rs"

[[bin]]
name = "day05"
src = "src/day05/main.rs"
