[package]
name = "aoc_2019"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
parse-display = "0.8.0"
parse-display-derive = "0.8.0"
permutohedron = "0.2.4"
num = "0.4.0"
pathfinding = "4.0.0"
bigint = "4.4.3"
